[package]
name = "wasm-example"
version = "0.1.0"
authors = ["Romarketplace Team"]
edition = "2018"

[lib]
crate-type = ['cdylib', 'rlib']

[dependencies]
wasm-bindgen = "0.2.84"

[dev-dependencies]
wasm-bindgen-test = "0.3.51"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"